--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,39 @@
-body {
+* {
+    box-sizing: border-box;
+}
+html, body {
+    min-height: 100%;
     background: #f5f5f5;
+    color: #000;
+}
+
+body {
+    font-size: 1.4rem;
+    text-rendering: optimizeLegibility;
+}
+
+body, ul, ol, dl {
+    margin: 0;
 }
 
 #canvas {
     width: 286px;
     height: 500px;
+}
+
+.container {
+    margin: 0 auto;
+    padding: 5rem 0;
+    max-width: 1300px;
+    display: flex;
+    flex-wrap: wrap;
+    min-height: 100vh;
+    overflow-x: hidden;
+    align-items: center;
+}
+
+.container > div {
+    flex: 1;
+    display: flex;
+    justify-content: center;
 }
