red green blue buttons

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ html, body {
     min-height: 100%;
     background: #f5f5f5;
     color: #000;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -25,15 +26,128 @@ body, ul, ol, dl {
     margin: 0 auto;
     padding: 5rem 0;
     max-width: 1300px;
-    display: flex;
-    flex-wrap: wrap;
     min-height: 100vh;
     overflow-x: hidden;
-    align-items: center;
 }
 
 .container > div {
     flex: 1;
     display: flex;
     justify-content: center;
+}
+
+.plot {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+body:not(:-moz-handler-blocked) fieldset {
+    display: table-cell;
+}
+/* TOGGLE STYLING */
+.toggle {
+    margin: 0 0 1.5rem;
+    box-sizing: border-box;
+    font-size: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
+}
+.toggle input {
+    width: 0;
+    height: 0;
+    position: absolute;
+    left: -9999px;
+}
+.toggle input + label {
+    margin: 0;
+    padding: 0.75rem 2rem;
+    box-sizing: border-box;
+    position: relative;
+    display: inline-block;
+    border: solid 1px #ddd;
+    background-color: #fff;
+    font-size: 1rem;
+    line-height: 140%;
+    font-weight: 600;
+    text-align: center;
+    box-shadow: 0 0 0 rgba(255, 255, 255, 0);
+    transition: border-color 0.15s ease-out, color 0.25s ease-out, background-color 0.15s ease-out, box-shadow 0.15s ease-out;
+}
+.toggle input + label:first-of-type {
+    border-radius: 6px 0 0 6px;
+    border-right: none;
+}
+.toggle input + label:last-of-type {
+    border-radius: 0 6px 6px 0;
+    border-left: none;
+}
+.toggle input:hover + label {
+    border-color: #213140;
+}
+
+.toggle input[id="blue"]:hover + label,
+.toggle input[id="blue"]:checked + label,
+.toggle input[id="blue"]:focus + label {
+    background-color: #4b9dea;
+    color: #fff;
+    box-shadow: 0 0 10px rgba(102, 179, 251, .5);
+    border-color: #4b9dea;
+    z-index: 1;
+}
+
+.toggle input[id="green"]:hover + label,
+.toggle input[id="green"]:checked + label,
+.toggle input[id="green"]:focus + label {
+    background-color: #50ea4b;
+    color: #fff;
+    box-shadow: 0 0 10px rgba(117, 251, 102, 0.5);
+    border-color: #50ea4b;
+    z-index: 1;
+}
+
+.toggle input[id="red"]:hover + label,
+.toggle input[id="red"]:checked + label,
+.toggle input[id="red"]:focus + label {
+    background-color: #ea4b4b;
+    color: #fff;
+    box-shadow: 0 0 10px rgba(251, 102, 102, 0.5);
+    border-color: #ea4b4b;
+    z-index: 1;
+}
+
+/*@media (max-width: 800px) {*/
+/*    .toggle input + label {*/
+/*        padding: 0.75rem 0.25rem;*/
+/*        flex: 0 0 50%;*/
+/*        display: flex;*/
+/*        justify-content: center;*/
+/*        align-items: center;*/
+/*    }*/
+/*}*/
+/* STYLING FOR THE STATUS HELPER TEXT FOR THE DEMO */
+.status {
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 400;
+}
+.status span {
+    font-weight: 600;
+    color: #b6985a;
+}
+.status span:first-of-type {
+    display: inline;
+}
+.status span:last-of-type {
+    display: none;
+}
+@media (max-width: 800px) {
+    .status span:first-of-type {
+        display: none;
+    }
+    .status span:last-of-type {
+        display: inline;
+    }
 }
