--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
 }
 html, body {
+    min-width: 100%;
     min-height: 100%;
     background: #f5f5f5;
     color: #000;
